feat(44): fix backend and add localization details
